SWIG (Simplified Wrapper and Interface Generator)

Version 1.3 Alpha 4 (not yet released)
======================================

7/20/00 : beazley
          Deprecated the %val and %out directives.  These directives
          shouldn't really be necessary since typemaps can be used
          to achieve similar results.   This also cleans up the
          handling of types and parameters quite a bit.
          *** POTENTIAL INCOMPATIBILITY ***
          
7/20/00 : ttn
	  Fixed unspecified-module bug in Guile support and removed
	  more non-"with-smobs" functionality using patches submitted
	  by Matthias Koeppe.

	  Re-enable recognition of "-with-smobs" (with no effect since
	  we use smobs by default now) for the time being.  After the
	  1.3a4 release, this option will signal an error.

7/17/00 : ttn
	  Fixed NULL-input bug in parameter list handling.
	  Reported by Matthias Koeppe.

7/12/00 : beazley
          Fixed memory leak in Python type-checking code. Reported by
          Keith Davidson.  Bug #109379.

7/10/00 : beazley
          Changed internal data structures related to function parameters.

7/10/00 : beazley
          Fixed some bugs related to the handling of the %name() directive
          and classes in the Tcl module. Problem reported by James Bailey.

7/10/00 : beazley
          Fixed parsing and enum handling problems with character constants.
          Reported by Greg Kochanski.

7/10/00 : beazley
          Removed WrapperFunction class from the core and updated the language
          module.  This will break third party modules.
          *** POTENTIAL INCOMPATIBILITY ***

7/9/00  : beazley
          Implementation of SWIG no longer makes use of C++ operator overloading.
          This will almost certainly break *all* third party language modules
          that are not part of the main SWIG CVS tree. Sorry.
          *** POTENTIAL INCOMPATIBILITY ***

7/8/00  : beazley
          Removed the experimental and undocumented "build" typemap that